# gpgpu_with_modern_cpp

./: CMakeLists.txt  TODO  ahnert_demidov_2012.tex  ahnert_demidov_rupp_2012.tex  cover_final.tex  cover_letter.tex  cover_revision.tex  gpgpu_with_modern_cpp.tex  ref.bib  vexcl_odeint.tex
data/: relperf.m
data/damped_oscillator/: Makefile  abs.eps  damped_oscillator.eps  genkernel.eps  genkernel.m  multiops.eps  multiops.m  perfcmp.eps  perfcmp_tahiti.eps  perfcmp_tesla.eps  perfmtx.eps  perfplot.m  process_results.m  scaling.eps  tahiti_scaling.eps  tahiti_vs_tesla.eps  tahiti_vs_tesla.m  vexcl_scaling.m  vexcl_scaling_tahiti.m
data/disordered_ham_lattice/: Makefile  experiment.m  perf_tahiti.m  perf_tesla.m  perfcmp.eps  perfcmp_tahiti.eps  perfcmp_tesla.eps  perfmtx.eps  perfmtx.m  process_results.m  scaling.eps  tahiti_vs_tesla.eps  tahiti_vs_tesla.m  vexcl_scaling.m
data/disordered_lattice/: disordered_lattice.eps  process_results.m  scaling.eps  vexcl_scaling.m
data/lorenz_ensemble/: Makefile  abs.eps  experiment.m  lorenz_ensemble.eps  perf_tahiti.m  perfcmp.eps  perfcmp_tahiti.eps  perfcmp_tesla.eps  perfmtx.eps  perfmtx.m  process_results.m  rel.eps  scaling.eps  tahiti_vs_tesla.eps  vexcl_scaling.m
data/phase_oscillator_chain/: Makefile  abs.eps  perf_tesla.m  perfcmp.eps  perfcmp_tahiti.eps  perfcmp_tesla.eps  perfmtx.eps  perfmtx.m  phase_oscillator.eps  process_results.m  rel.eps  scaling.eps  tahiti_vs_tesla.eps  tahiti_vs_tesla.m  vexcl_scaling.m
src/: CMakeLists.txt  gather_data.sh  run_tahiti_tests.sh  run_tests.sh  vt_user.h
src/damped_oscillator/: CMakeLists.txt  custom_oscillator.cpp  generated_oscillator.cpp  run_custom_kernel.sge  run_on_1gpu.sge  run_on_2gpu.sge  run_on_3gpu.sge  run_on_cpu.sge  run_on_tahiti.sh  run_thrust.sge  run_vexcl.sge  run_viennacl.sge  thrust_oscillator.cu  vexcl_oscillator.cpp  viennacl_oscillator.cpp
src/disordered_ham_lattice/: CMakeLists.txt  cmtl_disordered_lattice.cu  gmtl_disordered_lattice.cu  reference_disordered_lattice.cpp  run_cmtl4.sge  run_on_1gpu.sge  run_on_2gpu.sge  run_on_3gpu.sge  run_on_cpu.sge  run_on_tahiti.sh  run_ref.sge  run_thrust.sge  run_vexcl.sge  run_viennacl.sge  thrust_disordered_lattice.cu  vexcl_disordered_lattice.cpp  viennacl_disordered_lattice.cpp
src/lorenz_ensemble/: CMakeLists.txt  cmtl_lorenz_ensemble.cu  cpu_stepper_functor.cpp  custom_lorenz_ensemble.cpp  generated_lorenz_ensemble.cpp  gmtl_lorenz_ensemble.cu  gpu_controlled_stepper_functor.cu  gpu_stepper_functor.cu  reference_lorenz_ensemble.cpp  run_cmtl4.sge  run_on_1gpu.sge  run_on_2gpu.sge  run_on_3gpu.sge  run_on_cpu.sge  run_on_tahiti.sh  run_ref.sge  run_thrust.sge  run_vexcl.sge  run_viennacl.sge  stdvector_lorenz.cpp  thrust_lorenz_ensemble.cu  vexcl_lorenz_ensemble.cpp  viennacl_lorenz_ensemble.cpp
src/phase_oscillator_chain/: CMakeLists.txt  cmtl_phase_oscillator_chain.cu  gmtl_phase_oscillator_chain.cu  reference_phase_oscillator_chain.cpp  run_cmtl4.sge  run_on_1gpu.sge  run_on_2gpu.sge  run_on_3gpu.sge  run_on_cpu.sge  run_on_tahiti.sh  run_ref.sge  run_thrust.sge  run_vexcl.sge  run_viennacl.sge  thrust_phase_oscillator_chain.cu  vexcl_phase_oscillator_chain.cpp  viennacl_phase_oscillator_chain.cpp
src_damped_oscillator/: Makefile  oscillator.cpp  thrust_oscillator.cu  vexcl_oscillator.cpp  viennacl_oscillator.cpp
submit/: .gitignore  Makefile  prepare.sh
